; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_cpu.c_cpu_data_free.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_cpu.c_cpu_data_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i32 }

@BootCpuData = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@INTSTACK_SIZE = common dso_local global i64 0, align 8
@FIQSTACK_SIZE = common dso_local global i64 0, align 8
@kernel_map = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cpu_data_free(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %4 = icmp eq %struct.TYPE_4__* %3, @BootCpuData
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %31

6:                                                ; preds = %1
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @cpu_processor_free(i32 %9)
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @INTSTACK_SIZE, align 8
  %15 = sub nsw i64 %13, %14
  %16 = inttoptr i64 %15 to i8*
  %17 = load i64, i64* @INTSTACK_SIZE, align 8
  %18 = call i32 @kfree(i8* %16, i64 %17)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @FIQSTACK_SIZE, align 8
  %23 = sub nsw i64 %21, %22
  %24 = inttoptr i64 %23 to i8*
  %25 = load i64, i64* @FIQSTACK_SIZE, align 8
  %26 = call i32 @kfree(i8* %24, i64 %25)
  %27 = load i32, i32* @kernel_map, align 4
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %29 = ptrtoint %struct.TYPE_4__* %28 to i32
  %30 = call i32 @kmem_free(i32 %27, i32 %29, i32 24)
  br label %31

31:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @cpu_processor_free(i32) #1

declare dso_local i32 @kfree(i8*, i64) #1

declare dso_local i32 @kmem_free(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
